<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="24sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/state_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_toggle_frp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/configButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_setting_button" />

            <Button
                android:id="@+id/aboutButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_about_button" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="40sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_frp_log"
            android:textColor="?android:attr/textColorPrimary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/refreshButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_frp_log_refresh_button" />

            <Button
                android:id="@+id/deleteButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_frp_log_clear_button" />

        </LinearLayout>

        <TextView
            android:id="@+id/logTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_frp_log_empty"
            android:textColor="?android:attr/textColorPrimary"
            android:typeface="monospace" />

    </LinearLayout>
</ScrollView>
